tests/NormalTests/paczka1/fuzzy1/15056005.err
Error in line 7: CSKZl8 S585 78,7
Error in line 8: CSKZl8 A132 39,6
Error in line 20: S368 A799 -2,9
Error in line 18: KSMbneomq S368 83,6
Error in line 19: CSKZl8 A799 83,5
Error in line 16: S368 A799 57,3
Error in line 27: UThPdokMkD S585 20,0
